# doc/api.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 
 servers:
-  - url: /api
+  - url: /
 
 components:
   schemas:
@@ -18,6 +18,9 @@ components:
         login:
           type: string
           example: 'TestUser'
+        password:
+          type: string
+          example: '12345'
         version:
           type: number
           example: 1
@@ -30,6 +33,7 @@ components:
       required:
         - id
         - login
+        - password
     Artist:
       type: object
       properties:
@@ -158,7 +162,7 @@ paths:
     post:
       tags:
         - Signup
-      security: [ ]
+      security: []
       summary: Signup
       description: Signup a user
       requestBody:
@@ -189,7 +193,7 @@ paths:
           description: Bad request
         409:
           description: Conflict. Login already exists
-  /users:
+  /user:
     get:
       tags:
         - Users
